bhushan: working migration

--- a/gold-admin-frontend/package.json
+++ b/gold-admin-frontend/package.json
@@ -48,10 +48,10 @@
         "ng-inline-svg": "^9.2.2",
         "ngrx-store-freeze": "^0.2.4",
         "ngx-clipboard": "^12.3.0",
-        "ngx-daterangepicker-material": "^2.1.11",
         "ngx-highlightjs": "^3.0.3",
         "ngx-perfect-scrollbar": "^8.0.0",
         "ngx-permissions": "^7.0.3",
+        "ngx-toastr": "^10.0.4",
         "object-path": "^0.11.4",
         "perfect-scrollbar": "^1.4.0",
         "popper.js": "^1.16.0",
