--- a/gold-admin-frontend/nginx/default.conf
+++ b/gold-admin-frontend/nginx/default.conf
@@ -1,4 +1,4 @@
-upstream backend_horse {
+upstream backend_gold {
      server web:8000;
 }
 
@@ -8,7 +8,7 @@ server {
 
 
     client_max_body_size 4G;
-    root /usr/share/nginx/html/gold-app;
+    root /usr/share/nginx/html;
     index index.html;
     access_log /gold/logs/nginx-access.log;
     error_log /gold/logs/nginx-error.log;
