--- a/gold-loan-backend/package.json
+++ b/gold-loan-backend/package.json
@@ -17,6 +17,7 @@
         "http-errors": "^1.6.3",
         "jade": "~1.11.0",
         "jsonwebtoken": "^8.5.1",
+        "moment": "^2.24.0",
         "morgan": "~1.9.1",
         "multer": "^1.4.2",
         "nodemon": "^2.0.2",
