naming changes in model controller and routes file

--- a/gold-loan-backend/config/config.json
+++ b/gold-loan-backend/config/config.json
@@ -3,7 +3,8 @@
         "username": "postgres",
         "password": "nimap@123",
         "database": "gold",
-        "host": "db",
+        "host": "127.0.0.1",
+        "port":"6432",
         "dialect": "postgres",
         "operatorsAliases": false
     },
