--- a/gold-loan-backend/config/config.json
+++ b/gold-loan-backend/config/config.json
@@ -3,8 +3,7 @@
         "username": "postgres",
         "password": "nimap@123",
         "database": "gold",
-        "host": "127.0.0.1",
-        "port":"6432",
+        "host": "db",
         "dialect": "postgres",
         "operatorsAliases": false
     },
