--- a/gold-admin-frontend/package.json
+++ b/gold-admin-frontend/package.json
@@ -45,13 +45,13 @@
         "lodash": "^4.17.11",
         "material-design-icons": "^3.0.1",
         "moment": "^2.24.0",
+        "ng-http-loader": "^6.0.1",
         "ng-inline-svg": "^9.2.2",
         "ngrx-store-freeze": "^0.2.4",
         "ngx-clipboard": "^12.3.0",
         "ngx-highlightjs": "^3.0.3",
         "ngx-perfect-scrollbar": "^8.0.0",
         "ngx-permissions": "^7.0.3",
-        "ngx-spinner": "^8.1.0",
         "ngx-toastr": "^10.0.4",
         "object-path": "^0.11.4",
         "perfect-scrollbar": "^1.4.0",
