--- a/gold-loan-backend/Dockerfile
+++ b/gold-loan-backend/Dockerfile
@@ -8,7 +8,6 @@ WORKDIR /usr/src/app
 COPY package.json /usr/src/app/
 RUN npm install
 
-# RUN npx sequelize-cli db:migrate
 # Bun
 # Create app directory
 # WORKDIR /usr/src/app
@@ -19,6 +18,9 @@ RUN npm install
 
 # Bundle app source
 COPY . /usr/src/app
+
+RUN npx sequelize-cli db:migrate
+
 
 EXPOSE 3000
 CMD npm start
