--- a/gold-loan-backend/config/config.json
+++ b/gold-loan-backend/config/config.json
@@ -4,6 +4,7 @@
         "password": "nimap@123",
         "database": "gold",
         "host": "db",
+        "port":"8432",
         "dialect": "postgres",
         "operatorsAliases": false
     },
