--- a/gold-loan-backend/config/config.json
+++ b/gold-loan-backend/config/config.json
@@ -3,7 +3,7 @@
         "username": "postgres",
         "password": "nimap@123",
         "database": "gold",
-        "host": "db",
+        "host": "173.249.49.7",
         "port":"8432",
         "dialect": "postgres",
         "operatorsAliases": false
