--- a/gold-admin-frontend/package.json
+++ b/gold-admin-frontend/package.json
@@ -40,6 +40,7 @@
         "chartist": "^0.11.4",
         "classlist.js": "^1.1.20150312",
         "core-js": "^3.6.2",
+        "file-saver": "^2.0.2",
         "hammerjs": "^2.0.8",
         "highlight.js": "^9.17.1",
         "lodash": "^4.17.11",
@@ -61,6 +62,7 @@
         "tooltip.js": "^1.3.3",
         "tslib": "^1.10.0",
         "web-animations-js": "^2.3.2",
+        "xlsx": "^0.16.0",
         "zone.js": "~0.9.1"
     },
     "devDependencies": {
