--- a/gold-loan-backend/package.json
+++ b/gold-loan-backend/package.json
@@ -29,6 +29,7 @@
         "sequelize": "^5.21.5",
         "sequelize-cli": "^5.5.1",
         "swagger-jsdoc": "^4.0.0",
-        "swagger-ui-express": "^4.1.4"
+        "swagger-ui-express": "^4.1.4",
+        "uniqid": "^5.2.0"
     }
 }
