--- a/gold-admin-frontend/package.json
+++ b/gold-admin-frontend/package.json
@@ -26,6 +26,7 @@
         "@angular/router": "^8.2.14",
         "@fortawesome/fontawesome-free": "^5.12.0",
         "@ng-bootstrap/ng-bootstrap": "^5.1.5",
+        "@ng-select/ng-select": "^3.7.3",
         "@ngx-loading-bar/core": "^4.2.0",
         "@ngx-translate/core": "^11.0.1",
         "@types/lodash": "^4.14.149",
