--- a/gold-admin-frontend/package.json
+++ b/gold-admin-frontend/package.json
@@ -50,6 +50,7 @@
         "ngx-perfect-scrollbar": "^8.0.0",
         "ngx-permissions": "^7.0.3",
         "ngx-toastr": "^10.0.4",
+        "ngx-webcam": "^0.2.6",
         "object-path": "^0.11.4",
         "perfect-scrollbar": "^1.4.0",
         "popper.js": "^1.16.0",
