--- a/gold-admin-frontend/package.json
+++ b/gold-admin-frontend/package.json
@@ -49,11 +49,13 @@
         "ngx-highlightjs": "^3.0.3",
         "ngx-perfect-scrollbar": "^8.0.0",
         "ngx-permissions": "^7.0.3",
+        "ngx-quill": "^7.4.0-0",
         "ngx-toastr": "^10.0.4",
         "ngx-webcam": "^0.2.6",
         "object-path": "^0.11.4",
         "perfect-scrollbar": "^1.4.0",
         "popper.js": "^1.16.0",
+        "quill": "^1.3.7",
         "rxjs": "^6.5.4",
         "socicon": "^3.0.5",
         "tooltip.js": "^1.3.3",
