--- a/gold-loan-backend/package.json
+++ b/gold-loan-backend/package.json
@@ -30,6 +30,7 @@
         "sequelize-cli": "^5.5.1",
         "swagger-jsdoc": "^4.0.0",
         "swagger-ui-express": "^4.1.4",
-        "uniqid": "^5.2.0"
+        "uniqid": "^5.2.0",
+        "uuid-apikey": "^1.4.6"
     }
 }
