Complete Single Sign On

--- a/gold-admin-frontend/package.json
+++ b/gold-admin-frontend/package.json
@@ -46,6 +46,7 @@
         "ng-inline-svg": "^9.2.2",
         "ngrx-store-freeze": "^0.2.4",
         "ngx-clipboard": "^12.3.0",
+        "ngx-cookie-service": "^3.0.4",
         "ngx-highlightjs": "^3.0.3",
         "ngx-perfect-scrollbar": "^8.0.0",
         "ngx-permissions": "^7.0.3",
