--- a/gold-admin-frontend/package.json
+++ b/gold-admin-frontend/package.json
@@ -31,6 +31,7 @@
         "@ngx-translate/core": "^11.0.1",
         "@types/lodash": "^4.14.149",
         "angular-in-memory-web-api": "^0.8.0",
+        "angular-x-image-viewer": "^2.0.1",
         "bootstrap": "^4.4.1",
         "chart.js": "^2.9.3",
         "chartist": "^0.11.4",
