--- a/gold-loan-backend/config/config.json
+++ b/gold-loan-backend/config/config.json
@@ -2,7 +2,7 @@
     "development": {
         "username": "postgres",
         "password": "nimap@123",
-        "database": "gold_master",
+        "database": "gold_master_live",
         "host": "173.249.49.7",
         "port": "3432",
         "dialect": "postgres",
