--- a/gold-loan-backend/config/config.json
+++ b/gold-loan-backend/config/config.json
@@ -16,6 +16,14 @@
         "dialect": "postgres",
         "operatorsAliases": false
     },
+    "uat": {
+        "username": "loan_uat_admin",
+        "password": "hCVtBwCfBs658qp8JSOn",
+        "database": "emi-loan-uat",
+        "host": "emi-loan-uat.cdqj1gojl1vk.ap-south-1.rds.amazonaws.com",
+        "dialect": "postgres",
+        "operatorsAliases": false
+    },
     "production": {
         "username": "root",
         "password": null,
