changes and uat

--- a/gold-admin-frontend/angular.json
+++ b/gold-admin-frontend/angular.json
@@ -79,6 +79,31 @@
                   "maximumError": "10mb"
                 }
               ]
+            },
+            "uat": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.uat.ts"
+                }
+              ],
+              "scripts": [],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "7mb",
+                  "maximumError": "10mb"
+                }
+              ]
             }
           }
         },
@@ -86,7 +111,7 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "metronic:build",
-            "proxyConfig": "proxy.conf.json"
+            "proxyConfig": "src/proxy/proxy.conf.json"
           },
           "configurations": {
             "production": {
