--- a/gold-admin-frontend/package.json
+++ b/gold-admin-frontend/package.json
@@ -4,7 +4,7 @@
     "description": "Packages used by Angular",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve --proxy-config proxy.conf.json -o",
+        "start": "ng serve --proxy-config src/proxy/proxy.conf.json -o",
         "build": "ng build --prod",
         "test": "ng test",
         "lint": "ng lint",
