--- a/gold-loan-backend/config/config.json
+++ b/gold-loan-backend/config/config.json
@@ -1,18 +1,18 @@
 {
     "development": {
         "username": "postgres",
-        "password": "nimap@123",
-        "database": "gold_master_live",
-        "host": "173.249.49.7",
-        "port": "3432",
+        "password": "Nimap@123",
+        "database": "gold",
+        "host": "127.0.0.1",
         "dialect": "postgres",
         "operatorsAliases": false
     },
     "test": {
-        "username": "root",
-        "password": null,
-        "database": "database_test",
-        "host": "127.0.0.1",
+        "username": "postgres",
+        "password": "nimap@123",
+        "database": "gold_master_live",
+        "host": "173.249.49.7",
+        "port": "3432",
         "dialect": "postgres",
         "operatorsAliases": false
     },
