--- a/gold-loan-backend/package.json
+++ b/gold-loan-backend/package.json
@@ -7,6 +7,7 @@
         "migrate": "npx sequelize-cli db:migrate"
     },
     "dependencies": {
+        "axios": "^0.19.2",
         "bcrypt": "^4.0.1",
         "body-parser": "^1.19.0",
         "cookie-parser": "~1.4.4",
