--- a/gold-admin-frontend/package.json
+++ b/gold-admin-frontend/package.json
@@ -57,6 +57,7 @@
         "ngx-toastr": "^10.0.4",
         "ngx-webcam": "^0.2.6",
         "object-path": "^0.11.4",
+        "pdfjs-dist": "^2.4.456",
         "perfect-scrollbar": "^1.4.0",
         "popper.js": "^1.16.0",
         "quill": "^1.3.7",
