--- a/gold-loan-backend/Dockerfile
+++ b/gold-loan-backend/Dockerfile
@@ -19,7 +19,7 @@ RUN npm install
 # Bundle app source
 COPY . /usr/src/app
 
-RUN npx sequelize-cli db:migrate
+# RUN npx sequelize-cli db:migrate
 
 
 EXPOSE 3000
