--- a/gold-admin-frontend/package.json
+++ b/gold-admin-frontend/package.json
@@ -60,6 +60,7 @@
         "pdfjs-dist": "^2.4.456",
         "perfect-scrollbar": "^1.4.0",
         "popper.js": "^1.16.0",
+        "print-js": "^1.0.63",
         "quill": "^1.3.7",
         "rxjs": "^6.5.4",
         "socicon": "^3.0.5",
