--- a/gold-loan-backend/package.json
+++ b/gold-loan-backend/package.json
@@ -27,6 +27,7 @@
         "multer": "^1.4.2",
         "multer-s3": "^2.9.0",
         "nodemon": "^2.0.4",
+        "pdf-creator-node": "^1.4.1",
         "pg": "^7.18.2",
         "redis": "^3.0.2",
         "request": "^2.88.2",
