--- a/gold-admin-frontend/package.json
+++ b/gold-admin-frontend/package.json
@@ -14,6 +14,7 @@
     },
     "private": true,
     "dependencies": {
+        "@agm/core": "^3.0.0-beta.0",
         "@angular/animations": "^8.2.14",
         "@angular/cdk": "^8.2.3",
         "@angular/common": "^8.2.14",
@@ -79,6 +80,7 @@
         "@angular/material-moment-adapter": "^8.2.3",
         "@ngrx/schematics": "^8.6.0",
         "@types/chartist": "^0.9.46",
+        "@types/googlemaps": "^3.39.11",
         "@types/highlight.js": "^9.12.3",
         "@types/jasmine": "^3.5.0",
         "@types/jasminewd2": "^2.0.8",
