--- a/gold-loan-backend/package.json
+++ b/gold-loan-backend/package.json
@@ -26,6 +26,7 @@
         "morgan": "~1.9.1",
         "multer": "^1.4.2",
         "multer-s3": "^2.9.0",
+        "node-cron": "^2.0.3",
         "nodemon": "^2.0.4",
         "pdf-creator-node": "^1.4.1",
         "pg": "^7.18.2",
