--- a/gold-loan-backend/package.json
+++ b/gold-loan-backend/package.json
@@ -18,6 +18,7 @@
         "debug": "~2.6.9",
         "express": "~4.16.1",
         "express-validator": "^6.6.0",
+        "extend": "^3.0.2",
         "http-errors": "^1.8.0",
         "jade": "~1.11.0",
         "jsonwebtoken": "^8.5.1",
