--- a/gold-loan-backend/package.json
+++ b/gold-loan-backend/package.json
@@ -21,6 +21,7 @@
         "extend": "^3.0.2",
         "http-errors": "^1.8.0",
         "jade": "~1.11.0",
+        "json2xls": "^0.1.2",
         "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.19",
         "moment": "^2.27.0",
