changes in env.dev

--- a/gold-loan-backend/.env.development
+++ b/gold-loan-backend/.env.development
@@ -1,11 +1,10 @@
-NODE_ENV = development
-BASE_URL = https://goldapi.nimapinfotech.com/
+BASE_URL = https://localhost:3000/
 REDIS_HOST = localhost
 FILE_TO_AWS = false
 Secretkey = M7fhmUUDtWCpbx73yC+Hbe0qTpCeDyqDTFkRG1ef
 Accessid = AKIAQWZOWTQ4FWFWAVJN
 Bucket = gold-loan-uat
 Region = ap-south-1
-URL = https://goldapi.nimapinfotech.com
-BASE_URL_SWAGGER = goldapi.nimapinfotech.com
-SINGLE_SIGN_ON = https://gold.nimapinfotech.com
+URL = http://localhost:9020
+BASE_URL_SWAGGER = localhost:3000
+SINGLE_SIGN_ON = http://localhost:4200
