add always restart in compose file

--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -12,6 +12,7 @@ services:
         - "8100:3000"
       volumes:
         - gold-loan-test-public-data:/usr/src/app/public/uploads
+      restart: always
     
     redis:
       container_name: gold-loan-test-redis-demo
