--- a/gold-loan-backend/config/config.json
+++ b/gold-loan-backend/config/config.json
@@ -6,7 +6,8 @@
         "host": "127.0.0.1",
         "port": "6432",
         "dialect": "postgres",
-        "operatorsAliases": false
+        "operatorsAliases": false,
+        "logging": false
     },
     "test": {
         "username": "postgres",
