server point changed to https

--- a/gold-loan-backend/.env.uat
+++ b/gold-loan-backend/.env.uat
@@ -6,5 +6,5 @@ Secretkey = M7fhmUUDtWCpbx73yC+Hbe0qTpCeDyqDTFkRG1ef
 Accessid = AKIAQWZOWTQ4FWFWAVJN
 Bucket = gold-loan-uat
 Region = ap-south-1
-URL = http://golduat.nimapinfotech.com
-SINGLE_SIGN_ON = http://golduat.nimapinfotech.com
+URL = https://golduat.nimapinfotech.com
+SINGLE_SIGN_ON = https://golduat.nimapinfotech.com
