--- a/gold-loan-backend/.env.development
+++ b/gold-loan-backend/.env.development
@@ -1,9 +1,9 @@
-BASE_URL = https://localhost:3000/
+BASE_URL = http://127.0.0.1:3000/
 REDIS_HOST = localhost
 FILE_TO_AWS = false
-Secretkey = M7fhmUUDtWCpbx73yC+Hbe0qTpCeDyqDTFkRG1ef
-Accessid = AKIAQWZOWTQ4FWFWAVJN
-Bucket = gold-loan-uat
+Secretkey = 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
+Accessid = AKIA4BL3WQMRVWI352GM
+Bucket = augmont-gold
 Region = ap-south-1
 URL = http://localhost:9020
 BASE_URL_SWAGGER = localhost:3000
