--- a/gold-loan-backend/package.json
+++ b/gold-loan-backend/package.json
@@ -16,6 +16,7 @@
         "csvtojson": "^2.0.10",
         "custom-env": "^2.0.1",
         "debug": "~2.6.9",
+        "excel4node": "^1.7.2",
         "express": "~4.16.1",
         "express-validator": "^6.6.0",
         "extend": "^3.0.2",
