--- a/gold-loan-backend/.env.uat
+++ b/gold-loan-backend/.env.uat
@@ -1,6 +1,6 @@
 NODE_ENV = uat
 BASE_URL = https://gold-loan-uat.s3.ap-south-1.amazonaws.com/
-BASE_URL_SWAGGER = golduat.nimapinfotech.com
+BASE_URL_SWAGGER = goldapiuat.nimapinfotech.com
 FILE_TO_AWS = true
 Secretkey = M7fhmUUDtWCpbx73yC+Hbe0qTpCeDyqDTFkRG1ef
 Accessid = AKIAQWZOWTQ4FWFWAVJN
