--- a/gold-loan-backend/package.json
+++ b/gold-loan-backend/package.json
@@ -13,6 +13,7 @@
         "body-parser": "^1.19.0",
         "cookie-parser": "~1.4.4",
         "cors": "^2.8.5",
+        "crypto": "^1.0.1",
         "csvtojson": "^2.0.10",
         "custom-env": "^2.0.1",
         "debug": "~2.6.9",
@@ -33,6 +34,7 @@
         "nodemon": "^2.0.4",
         "pdf-creator-node": "^1.4.1",
         "pg": "^7.18.2",
+        "razorpay": "^2.0.6",
         "redis": "^3.0.2",
         "request": "^2.88.2",
         "sequelize": "^5.22.3",
