--- a/gold-admin-frontend/package.json
+++ b/gold-admin-frontend/package.json
@@ -69,7 +69,7 @@
         "tslib": "^1.10.0",
         "web-animations-js": "^2.3.2",
         "xlsx": "^0.16.0",
-        "zone.js": "~0.9.1"
+        "zone.js": "^0.10.3"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "^0.803.24",
