--- a/gold-loan-backend/package.json
+++ b/gold-loan-backend/package.json
@@ -11,6 +11,7 @@
         "axios": "^0.19.2",
         "bcrypt": "^4.0.1",
         "body-parser": "^1.19.0",
+        "cluster": "^0.7.7",
         "cookie-parser": "~1.4.4",
         "cors": "^2.8.5",
         "crypto": "^1.0.1",
@@ -33,6 +34,7 @@
         "multer-s3": "^2.9.0",
         "node-cron": "^2.0.3",
         "nodemon": "^2.0.4",
+        "os": "^0.1.1",
         "pdf-creator-node": "^1.4.1",
         "pg": "^7.18.2",
         "razorpay": "^2.0.6",
