--- a/gold-loan-backend/package.json
+++ b/gold-loan-backend/package.json
@@ -19,6 +19,7 @@
         "csvtojson": "^2.0.10",
         "custom-env": "^2.0.1",
         "debug": "~2.6.9",
+        "ejs": "^3.1.5",
         "excel4node": "^1.7.2",
         "express": "~4.16.1",
         "express-useragent": "^1.0.15",
@@ -34,6 +35,7 @@
         "multer": "^1.4.2",
         "multer-s3": "^2.9.0",
         "node-cron": "^2.0.3",
+        "nodemailer": "^6.4.13",
         "nodemon": "^2.0.4",
         "os": "^0.1.1",
         "pdf-creator-node": "^1.4.1",
