--- a/gold-loan-backend/config/config.json
+++ b/gold-loan-backend/config/config.json
@@ -2,7 +2,7 @@
     "development": {
         "username": "postgres",
         "password": "nimap@123",
-        "database": "packet_tracking",
+        "database": "gold_new_changes",
         "host": "127.0.0.1",
         "port": "6432",
         "dialect": "postgres",
