--- a/gold-loan-backend/.env.production
+++ b/gold-loan-backend/.env.production
@@ -1,6 +1,6 @@
 NODE_ENV = production
 BASE_URL = https://gold-loan-uat.s3.ap-south-1.amazonaws.com/
-BASE_URL_SWAGGER = goldapiuat.nimapinfotech.com
+BASE_URL_SWAGGER = 3.7.134.174:3000
 FILE_TO_AWS = true
 Secretkey = M7fhmUUDtWCpbx73yC+Hbe0qTpCeDyqDTFkRG1ef
 Accessid = AKIAQWZOWTQ4FWFWAVJN
