--- a/gold-loan-backend/.env.development
+++ b/gold-loan-backend/.env.development
@@ -8,3 +8,5 @@ Region = ap-south-1
 URL = http://localhost:9020
 BASE_URL_SWAGGER = localhost:3000
 SINGLE_SIGN_ON = http://localhost:4200
+BASE_URL_ADMIN = https://gold.nimapinfotech.com/
+BASE_URL_CUSTOMER = https://goldcustomer.nimapinfotech.com/customer/homepage/
