--- a/gold-loan-backend/.env.uat
+++ b/gold-loan-backend/.env.uat
@@ -8,3 +8,5 @@ Bucket = gold-loan-uat
 Region = ap-south-1
 URL = https://goldapiuat.nimapinfotech.com
 SINGLE_SIGN_ON = https://golduat.nimapinfotech.com
+BASE_URL_ADMIN = https://golduat.nimapinfotech.com/
+BASE_URL_CUSTOMER = https://golduatcustomer.nimapinfotech.com/customer/homepage/
