--- a/gold-loan-backend/.env.test
+++ b/gold-loan-backend/.env.test
@@ -5,3 +5,5 @@ FILE_TO_AWS = false
 URL = https://goldapi.nimapinfotech.com
 BASE_URL_SWAGGER = goldapi.nimapinfotech.com
 SINGLE_SIGN_ON = https://gold.nimapinfotech.com
+BASE_URL_ADMIN = https://gold.nimapinfotech.com/
+BASE_URL_CUSTOMER = https://goldcustomer.nimapinfotech.com/customer/homepage/
