redis and bucket added

--- a/gold-loan-backend/.env.production
+++ b/gold-loan-backend/.env.production
@@ -1,10 +1,10 @@
 NODE_ENV = production
-BASE_URL = https://gold-loan-uat.s3.ap-south-1.amazonaws.com/
+BASE_URL = https://augmont-loan-prod.s3.ap-south-1.amazonaws.com/
 BASE_URL_SWAGGER = 3.7.134.174:3000
 FILE_TO_AWS = true
 Secretkey = M7fhmUUDtWCpbx73yC+Hbe0qTpCeDyqDTFkRG1ef
 Accessid = AKIAQWZOWTQ4FWFWAVJN
-Bucket = gold-loan-uat
+Bucket = augmont-loan-prod
 Region = ap-south-1
 URL = http://3.7.134.174:3000
 SINGLE_SIGN_ON = http://3.7.134.174:3003
