--- a/gold-loan-backend/.env.production
+++ b/gold-loan-backend/.env.production
@@ -8,3 +8,5 @@ Bucket = augmont-loan-prod
 Region = ap-south-1
 URL = http://3.7.134.174:3000
 SINGLE_SIGN_ON = http://3.7.134.174:3003
+BASE_URL_ADMIN = https://gold.nimapinfotech.com/
+BASE_URL_CUSTOMER = https://goldcustomer.nimapinfotech.com/customer/homepage/
