--- a/gold-loan-backend/.env.production
+++ b/gold-loan-backend/.env.production
@@ -1,12 +1,12 @@
 NODE_ENV = production
 BASE_URL = https://augmont-loan-prod.s3.ap-south-1.amazonaws.com/
-BASE_URL_SWAGGER = 3.7.134.174:3000
+BASE_URL_SWAGGER = gold.augmont.com
 FILE_TO_AWS = true
 Secretkey = M7fhmUUDtWCpbx73yC+Hbe0qTpCeDyqDTFkRG1ef
 Accessid = AKIAQWZOWTQ4FWFWAVJN
 Bucket = augmont-loan-prod
 Region = ap-south-1
-URL = http://3.7.134.174:3000
-SINGLE_SIGN_ON = http://3.7.134.174:3003
-BASE_URL_ADMIN = https://gold.nimapinfotech.com/
-BASE_URL_CUSTOMER = https://goldcustomer.nimapinfotech.com/customer/homepage/
+URL = http://gold.augmont.com
+SINGLE_SIGN_ON = http://gold.augmont.com
+BASE_URL_ADMIN = http://gold.augmont.com/
+BASE_URL_CUSTOMER = http://customer.augmont.com/customer/homepage/
