--- a/gold-loan-backend/.env.production
+++ b/gold-loan-backend/.env.production
@@ -6,7 +6,7 @@ Secretkey = M7fhmUUDtWCpbx73yC+Hbe0qTpCeDyqDTFkRG1ef
 Accessid = AKIAQWZOWTQ4FWFWAVJN
 Bucket = augmont-loan-prod
 Region = ap-south-1
-URL = http://gold.augmont.com
-SINGLE_SIGN_ON = http://gold.augmont.com
-BASE_URL_ADMIN = http://gold.augmont.com/
-BASE_URL_CUSTOMER = http://customer.augmont.com/customer/homepage/
+URL = https://gold.augmont.com
+SINGLE_SIGN_ON = https://gold.augmont.com
+BASE_URL_ADMIN = https://gold.augmont.com/
+BASE_URL_CUSTOMER = https://customer.augmont.com/customer/homepage/
