--- a/gold-loan-backend/.env.new
+++ b/gold-loan-backend/.env.new
@@ -1,7 +1,9 @@
 NODE_ENV = new
-BASE_URL = http://173.249.49.7:8200/
+BASE_URL = https://goldapi1.nimapinfotech.com/
 REDIS_HOST = redis
 FILE_TO_AWS = false
-URL = http://173.249.49.7:8200/
-BASE_URL_SWAGGER = 173.249.49.7:8200
-SINGLE_SIGN_ON = http://173.249.49.7:8200
+URL = https://goldapi1.nimapinfotech.com
+BASE_URL_SWAGGER = goldapi1.nimapinfotech.com
+SINGLE_SIGN_ON = https://gold1.nimapinfotech.com
+BASE_URL_ADMIN = https://gold1.nimapinfotech.com/
+BASE_URL_CUSTOMER = https://goldcustomer.nimapinfotech.com/customer/homepage/
