--- a/gold-loan-backend/package.json
+++ b/gold-loan-backend/package.json
@@ -51,6 +51,7 @@
         "swagger-jsdoc": "^4.2.3",
         "swagger-ui-express": "^4.1.4",
         "uniqid": "^5.2.0",
-        "uuid-apikey": "^1.5.1"
+        "uuid-apikey": "^1.5.1",
+        "xlsx2json": "^1.0.0"
     }
 }
