added DIGITALGOLDAPI in env test

--- a/gold-loan-backend/.env.test
+++ b/gold-loan-backend/.env.test
@@ -7,3 +7,4 @@ BASE_URL_SWAGGER = goldapi.nimapinfotech.com
 SINGLE_SIGN_ON = https://gold.nimapinfotech.com
 BASE_URL_ADMIN = https://gold.nimapinfotech.com/
 BASE_URL_CUSTOMER = https://goldcustomer.nimapinfotech.com/customer/homepage/
+DIGITALGOLDAPI = https://uat-api.augmontgold.com/api
