--- a/gold-loan-backend/.env.new
+++ b/gold-loan-backend/.env.new
@@ -7,3 +7,4 @@ BASE_URL_SWAGGER = goldapi1.nimapinfotech.com
 SINGLE_SIGN_ON = https://gold1.nimapinfotech.com
 BASE_URL_ADMIN = https://gold1.nimapinfotech.com/
 BASE_URL_CUSTOMER = https://goldcustomer.nimapinfotech.com/customer/homepage/
+DIGITALGOLDAPI = https://uat-api.augmontgold.com/api
