order detail table change, sellable metal amount update change

--- a/gold-loan-backend/.env.new
+++ b/gold-loan-backend/.env.new
@@ -6,5 +6,5 @@ URL = https://goldapi1.nimapinfotech.com
 BASE_URL_SWAGGER = goldapi1.nimapinfotech.com
 SINGLE_SIGN_ON = https://gold1.nimapinfotech.com
 BASE_URL_ADMIN = https://gold1.nimapinfotech.com/
-BASE_URL_CUSTOMER = https://goldcustomer.nimapinfotech.com/customer/homepage/
+BASE_URL_CUSTOMER = https://goldcustomer1.nimapinfotech.com
 DIGITALGOLDAPI = https://uat-api.augmontgold.com/api
