--- a/gold-loan-backend/.env.uat
+++ b/gold-loan-backend/.env.uat
@@ -10,3 +10,4 @@ URL = https://goldapiuat.nimapinfotech.com
 SINGLE_SIGN_ON = https://golduat.nimapinfotech.com
 BASE_URL_ADMIN = https://golduat.nimapinfotech.com/
 BASE_URL_CUSTOMER = https://golduatcustomer.nimapinfotech.com/customer/homepage/
+DIGITALGOLDAPI = https://uat-api.augmontgold.com/api
