--- a/gold-admin-frontend/nginx/default.conf
+++ b/gold-admin-frontend/nginx/default.conf
@@ -27,8 +27,14 @@ server {
     }
 
     location / {
-		try_files $uri /index.html =404;
-	}
+        gzip_static on;
+        try_files $uri @index;
+    }
 
+    location @index {
+        add_header Cache-Control no-cache;
+        expires 0;
+        try_files /index.html =404;
+    }
 
 }
