--- a/gold-admin-frontend/nginx/default.conf
+++ b/gold-admin-frontend/nginx/default.conf
@@ -26,9 +26,16 @@ server {
          }
     }
 
-    location / {
-		try_files $uri /index.html =404;
-	}
+     location / {
+        gzip_static on;
+        try_files $uri @index;
+    }
+
+    location @index {
+        add_header Cache-Control no-cache;
+        expires 0;
+        try_files /index.html =404;
+    }
 
 
 }
