karza pan card verification api

--- a/gold-loan-backend/.env.new
+++ b/gold-loan-backend/.env.new
@@ -8,3 +8,4 @@ SINGLE_SIGN_ON = https://gold1.nimapinfotech.com
 BASE_URL_ADMIN = https://gold1.nimapinfotech.com/
 BASE_URL_CUSTOMER = https://goldcustomer1.nimapinfotech.com
 DIGITALGOLDAPI = https://uat-api.augmontgold.com/api
+KARZA_ENV = TEST
