--- a/gold-loan-backend/.env.uat
+++ b/gold-loan-backend/.env.uat
@@ -11,3 +11,4 @@ SINGLE_SIGN_ON = https://golduat.nimapinfotech.com
 BASE_URL_ADMIN = https://golduat.nimapinfotech.com/
 BASE_URL_CUSTOMER = https://golduatcustomer.nimapinfotech.com/customer/homepage/
 DIGITALGOLDAPI = https://uat-api.augmontgold.com/api
+KARZA_ENV = TEST
