--- a/gold-loan-backend/.env.development
+++ b/gold-loan-backend/.env.development
@@ -11,3 +11,4 @@ SINGLE_SIGN_ON = http://localhost:4200
 BASE_URL_ADMIN = https://gold.nimapinfotech.com/
 BASE_URL_CUSTOMER = https://goldcustomer.nimapinfotech.com/customer/homepage/
 DIGITALGOLDAPI = https://uat-api.augmontgold.com/api
+KARZA_ENV = TEST
