--- a/gold-loan-backend/.env.test
+++ b/gold-loan-backend/.env.test
@@ -6,6 +6,6 @@ URL = https://goldapi.nimapinfotech.com
 BASE_URL_SWAGGER = goldapi.nimapinfotech.com
 SINGLE_SIGN_ON = https://gold.nimapinfotech.com
 BASE_URL_ADMIN = https://gold.nimapinfotech.com/
-BASE_URL_CUSTOMER = https://goldcustomer.nimapinfotech.com/customer/homepage/
+BASE_URL_CUSTOMER = https://goldcustomer.nimapinfotech.com
 DIGITALGOLDAPI = https://uat-api.augmontgold.com/api
 KARZA_ENV = TEST
