--- a/gold-loan-backend/package.json
+++ b/gold-loan-backend/package.json
@@ -7,7 +7,7 @@
         "migrate": "npx sequelize-cli db:migrate"
     },
     "dependencies": {
-        "aws-sdk": "^2.771.0",
+        "aws-sdk": "^2.817.0",
         "axios": "^0.19.2",
         "bcrypt": "^4.0.1",
         "body-parser": "^1.19.0",
@@ -23,10 +23,11 @@
         "excel4node": "^1.7.2",
         "express": "~4.16.1",
         "express-useragent": "^1.0.15",
-        "express-validator": "^6.6.0",
+        "express-validator": "^6.8.1",
         "extend": "^3.0.2",
         "http-errors": "^1.8.0",
         "jade": "~1.11.0",
+        "json-stringify": "^1.0.0",
         "json2xls": "^0.1.2",
         "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.20",
@@ -35,10 +36,10 @@
         "multer": "^1.4.2",
         "multer-s3": "^2.9.0",
         "node-cron": "^2.0.3",
-        "nodemailer": "^6.4.13",
-        "nodemon": "^2.0.4",
+        "nodemailer": "^6.4.17",
+        "nodemon": "^2.0.6",
         "os": "^0.1.1",
-        "pdf-creator-node": "^1.4.1",
+        "pdf-creator-node": "^1.4.2",
         "pg": "^7.18.2",
         "phantomjs-prebuilt": "^2.1.16",
         "qs": "^6.9.4",
@@ -48,8 +49,8 @@
         "request": "^2.88.2",
         "sequelize": "^5.22.3",
         "sequelize-cli": "^5.5.1",
-        "swagger-jsdoc": "^4.2.3",
-        "swagger-ui-express": "^4.1.4",
+        "swagger-jsdoc": "^4.3.2",
+        "swagger-ui-express": "^4.1.6",
         "uniqid": "^5.2.0",
         "uuid-apikey": "^1.5.1",
         "xlsx2json": "^1.0.0"
