sms config changed

--- a/gold-loan-backend/config/config.json
+++ b/gold-loan-backend/config/config.json
@@ -45,7 +45,7 @@
     "ekyc": {
         "username": "postgres",
         "password": "nimap@123",
-        "database": "gold_ekyc",
+        "database": "ekyc_gold",
         "host": "173.249.49.7",
         "port": "3432",
         "dialect": "postgres",
